# halodi-messages

./: .gitignore  .gitlab-ci.yml  API.md  README.md  build.gradle  gradle-release.properties  gradle.properties
halodi-messages-unity-support/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset
halodi_definitions/: CMakeLists.txt  package.xml
halodi_definitions/msg/: Joint.idl  ReferenceFrame.idl
halodi_msgs/: CMakeLists.txt  README.md  package.xml
halodi_msgs/msg/: ARMarkers.idl  AutonomyMode.idl  BalanceMode.idl  BatteryStatus.idl  ControlInputState.idl  ControllerData.idl  DisableWholeBodyBalance.idl  DrivingCommand.idl  DrivingTrajectory.idl  DrivingTrajectoryPoint.idl  ExtrinsicCalibration.idl  ExtrinsicCalibrationInfo.idl  ExtrinsicCalibrationResponse.idl  FeedbackParameters3D.idl  FeedbackParametersSE3.idl  HandCommand.idl  HandMotorCommand.idl  HandMotorStatus.idl  ImuName.idl  Joint.idl  JointCalibration.idl  JointMeasurement.idl  JointName.idl  JointSpaceCommand.idl  JointStatus.idl  ModeSchedule.idl  MotorStatus.idl  MpcFlattenedController.idl  MpcInput.idl  MpcObservation.idl  MpcState.idl  MpcTargetTrajectories.idl  PassivityData.idl  PursuitTrajectory.idl  PursuitTrajectoryPoint.idl  ReferenceFrame.idl  ReferenceFrameName.idl  RobotLinkCalibrationInfo.idl  RobotPoseEstimateConfiguration.idl  RobotStatus.idl  (+13 more)
halodi_msgs/srv/: GetStampedTF.srv  TFLookup.srv
halodi_wbc_msgs/: CMakeLists.txt  package.xml
halodi_wbc_msgs/msg/: DisableWholeBodyBalance.idl  DrivingCommand.idl  FeedbackParameters3D.idl  FeedbackParametersSE3.idl  JointSpaceCommand.idl  SpatialAcceleration.idl  TaskSpaceCommand.idl  WholeBodyControllerCommand.idl
install/: local_setup.sh  setup.sh
java-typesupport/: README.md
java-typesupport/action_msgs/msg/: GoalInfo.idl  GoalStatus.idl  GoalStatusArray.idl
java-typesupport/actionlib_msgs/msg/: GoalID.idl  GoalStatus.idl  GoalStatusArray.idl
java-typesupport/builtin_interfaces/msg/: Duration.idl  Time.idl
java-typesupport/diagnostic_msgs/msg/: DiagnosticArray.idl  DiagnosticStatus.idl  KeyValue.idl
java-typesupport/geometry_msgs/msg/: Accel.idl  AccelStamped.idl  AccelWithCovariance.idl  AccelWithCovarianceStamped.idl  Inertia.idl  InertiaStamped.idl  Point.idl  Point32.idl  PointStamped.idl  Polygon.idl  PolygonStamped.idl  Pose.idl  Pose2D.idl  PoseArray.idl  PoseStamped.idl  PoseWithCovariance.idl  PoseWithCovarianceStamped.idl  Quaternion.idl  QuaternionStamped.idl  Transform.idl  TransformStamped.idl  Twist.idl  TwistStamped.idl  TwistWithCovariance.idl  TwistWithCovarianceStamped.idl  Vector3.idl  Vector3Stamped.idl  Wrench.idl  WrenchStamped.idl
java-typesupport/lifecycle_msgs/msg/: State.idl  Transition.idl  TransitionDescription.idl  TransitionEvent.idl
java-typesupport/nav_msgs/msg/: GridCells.idl  MapMetaData.idl  OccupancyGrid.idl  Odometry.idl  Path.idl
java-typesupport/rcl_interfaces/msg/: FloatingPointRange.idl  IntegerRange.idl  IntraProcessMessage.idl  ListParametersResult.idl  Log.idl  Parameter.idl  ParameterDescriptor.idl  ParameterEvent.idl  ParameterEventDescriptors.idl  ParameterType.idl  ParameterValue.idl  SetParametersResult.idl
java-typesupport/rosgraph_msgs/msg/: Clock.idl
java-typesupport/sensor_msgs/msg/: BatteryState.idl  CameraInfo.idl  ChannelFloat32.idl  CompressedImage.idl  FluidPressure.idl  Illuminance.idl  Image.idl  Imu.idl  JointState.idl  Joy.idl  JoyFeedback.idl  JoyFeedbackArray.idl  LaserEcho.idl  LaserScan.idl  MagneticField.idl  MultiDOFJointState.idl  MultiEchoLaserScan.idl  NavSatFix.idl  NavSatStatus.idl  PointCloud.idl  PointCloud2.idl  PointField.idl  Range.idl  RegionOfInterest.idl  RelativeHumidity.idl  Temperature.idl  TimeReference.idl
java-typesupport/shape_msgs/msg/: Mesh.idl  MeshTriangle.idl  Plane.idl  SolidPrimitive.idl
java-typesupport/std_msgs/msg/: Bool.idl  Byte.idl  ByteMultiArray.idl  Char.idl  ColorRGBA.idl  Empty.idl  Float32.idl  Float32MultiArray.idl  Float64.idl  Float64MultiArray.idl  Header.idl  Int16.idl  Int16MultiArray.idl  Int32.idl  Int32MultiArray.idl  Int64.idl  Int64MultiArray.idl  Int8.idl  Int8MultiArray.idl  MultiArrayDimension.idl  MultiArrayLayout.idl  String.idl  UInt16.idl  UInt16MultiArray.idl  UInt32.idl  UInt32MultiArray.idl  UInt64.idl  UInt64MultiArray.idl  UInt8.idl  UInt8MultiArray.idl
java-typesupport/stereo_msgs/msg/: DisparityImage.idl
java-typesupport/tf2_msgs/msg/: TF2Error.idl  TFMessage.idl
java-typesupport/trajectory_msgs/msg/: JointTrajectory.idl  JointTrajectoryPoint.idl  MultiDOFJointTrajectory.idl  MultiDOFJointTrajectoryPoint.idl
java-typesupport/unique_identifier_msgs/msg/: UUID.idl
java-typesupport/visualization_msgs/msg/: ImageMarker.idl  InteractiveMarker.idl  InteractiveMarkerControl.idl  InteractiveMarkerFeedback.idl  Marker.idl  (+5 more)
log/: latest_build
ocs2_ros2_msgs/: CMakeLists.txt  package.xml
ocs2_ros2_msgs/msg/: ControllerData.idl  MpcFlattenedController.idl  MpcObservation.idl  MpcPerformanceIndices.idl  MpcTargetTrajectories.idl
(+468 files in other folders)
